// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateDataAccessReport dataAccessReports entity sdk promise fails calls toastr error 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      undefined,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateDataAccessReport dataAccessReports entity sdk promise fails returns updateEntityRejected 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "dataAccessReports",
    "sdkCall": Object {
      "command": "updateDataAccessReport",
      "crudAction": "update",
      "data": Object {
        "dataAccessReportId": "mock entity id",
        "name": "mockName",
        "reportType": "mockReportType",
      },
      "module": "entities",
      "topic": "cxengage/entities/update-data-access-report-response",
    },
    "type": "UPDATE_ENTITY_REJECTED",
    "values": Object {
      "name": "mockName",
      "reportType": "mockReportType",
    },
  },
]
`;

exports[`UpdateDataAccessReport dataAccessReports entity update entity calls the correct sdk function 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "command": "updateDataAccessReport",
        "crudAction": "update",
        "data": Object {
          "dataAccessReportId": "mock entity id",
          "name": "mockName",
          "reportType": "mockReportType",
        },
        "module": "entities",
        "topic": "cxengage/entities/update-data-access-report-response",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`UpdateDataAccessReport dataAccessReports entity update entity calls toastr success 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Data Access Report was updated successfully!",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`UpdateDataAccessReport dataAccessReports entity update entity returns updateEntityFulfilled 1`] = `
Array [
  Object {
    "entityId": "mock entity id",
    "entityName": "dataAccessReports",
    "response": "mock response",
    "sdkCall": Object {
      "command": "updateDataAccessReport",
      "crudAction": "update",
      "data": Object {
        "dataAccessReportId": "mock entity id",
        "name": "mockName",
        "reportType": "mockReportType",
      },
      "module": "entities",
      "topic": "cxengage/entities/update-data-access-report-response",
    },
    "type": "UPDATE_ENTITY_FULFILLED",
    "values": Object {
      "name": "mockName",
      "reportType": "mockReportType",
    },
  },
]
`;
